# dellPlugin

./: setup.cfg
dell_tempest_plugin/: plugin.py
dell_tempest_plugin/tests/api/: base.py  mybase.py  myderived.py  test_dell_nova_aggregate_instance.py  test_host_aggregate_create_instance.py
hello_world_tempest_plugin/: plugin.py
hello_world_tempest_plugin/tests/api/: filenames.txt  test_dell_nova_aggregate_instance.py
