[metadata]
name = dell-tempest-plugin
version = 0.0.9
summary = Basic Tempest plugin with a hello world test case
description-file = README.rst
author = Abhinav 
author-email = hi@mbonell.com
home-page = https://github.com/MBonell/hello-world-tempest-plugin
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: OpenStack Development Team
    Intended Audience :: OpenStack QA Team
    Intended Audience :: Information Technology
    Operating System :: Linux
    Natural Language :: English
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Programming Language :: Python
keywords =
    Plugin
    Tempest
    OpenStack

[entry_points]
tempest.test_plugins =
    dell-tempest-plugin = dell_tempest_plugin.plugin:DellTempestPlugin

[pbr]
warnerrors = true
